methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:27: error: not found: value bruhUp
        bruhUp()
        ^